# pictoria

./: .gitignore  .gitmodules  CLAUDE.md  README.md  justfile
docs/superpowers/plans/: 2026-05-23-siglip2-embedding-migration.md  2026-06-02-global-undo-redo.md  2026-06-03-gallery-dl-creator-fetch.md  2026-06-05-annotation-infra-p0.md
docs/superpowers/specs/: 2026-05-23-siglip2-embedding-migration-design.md  2026-05-31-silva-scorer-integration-design.md  2026-06-02-global-undo-redo-design.md  2026-06-03-folder-tree-aggregate-stats-design.md  2026-06-03-gallery-dl-creator-fetch-design.md  2026-06-03-group-score-sync-design.md  2026-06-03-near-duplicate-grouping-design.md  2026-06-05-i18n-design.md
scripts/: .env.example  README.md  diffusers_to_sd.py  download_from_s3.py  load_env.py  rclone_sync.ps1  rclone_sync.sh  run_get_artist_data.py  setup_rclone.md  sync_with_awscli.sh  upload_to_hf.py  upload_to_s3.py
server/: .env.example  .gitignore  README.md  creators.txt.example  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 2025_03_10_2158-83eda41f8b31_add_post_vector_table.py  2025_03_10_2214-88b9106d8fa4_add_post_vector_table.py  2025_03_17_2259-2b5acb60b380_add_dominant_color_field_for_post.py  2025_04_07_1942-0459296feb3a_with_timezone.py  2025_04_13_2318-2f23834a32f4_add_times.py  2025_04_19_1744-b36f463633c1_server_default_updated_at.py  2025_05_31_1328-375b24b8c1db_post_waifu_scorer.py  2025_06_01_1352-6dbeb14619fb_rename_waifu_score.py  2025_06_07_2328-bb928e4c7a48_on_update_cascade.py  2025_08_22_1752-4a6d44b0aa23_add_indexes_for_query_optimization.py  2025_08_22_1757-2cb2fe7f0f5c_add_indexes_for_post_has_tag_and_post_.py  2025_08_24_0341-e8621e35996b_md5_to_sha256.py  2025_11_23_0109-5b60f1ec6a4b_add_thumbhash_to_posts.py  2026_05_12_0001-c1a7f3d9b5e2_add_vector_indexes.py
server/data/: categories.yml  tag.ja.json  tag.zh-Hans.json  tag_classification.csv  tag_classification.yml
server/migrations/: 0001_initial.sql  0002_post_process_failures.sql  0003_last_accessed_at.sql  0003_rename_thumbhash_to_arthash.sql  0004_reencode_arthash_n32.sql  0005_post_aesthetic_scores.sql  0006_post_vectors_siglip2.sql  0007_drop_post_vectors.sql  0008_tag_post_count.sql  0009_post_grouping.sql  0010_index_updated_at.sql  0011_annotations.sql  0012_annotation_sampling_indexes.sql
server/scripts/: apply_score_by_waifu_scorer.py  auto_scorer.py  backfill_danbooru_tags.py  backfill_silva_scores.py  calculate_color.py  clean_non_image_posts.py  clean_tags.py  clean_truncated_images.py  compare_scores.py  export_annotations.py  fetch_creators.py  inspect_db.py  migrate_duckdb_to_sqlite.py  output_dataset.py  translate_tags.py  upload_hf_dataset.py  waifu_score_all.py
server/scripts/run/: sdxl.py
server/scripts/tags/: better_classification.py  build_tag_i18n.py  clean_tags.py  csv_to_yaml.py  embed_categories.py  prepare_embeddings.py  tag_classification.py  translate_tags.py
server/src/: app.py  bootstrap.py  main.py  models.py  progress.py  scheme.py  shared.py  slow_query_logger.py  utils.py  watch.py
server/src/ai/: clip.py  hf_loader.py  make_captions.py  siglip_embed.py  siglip_scorer.py  silva_scorer.py  torch_runtime.py  waifu_scorer.py
server/src/danbooru/: __init__.py
server/src/db/: __init__.py  connection.py  entities.py  filters.py  helpers.py  migrator.py
server/src/db/queries/: __init__.py  post_query.py
server/src/db/repositories/: __init__.py  annotation_queues.py  annotations.py  colors.py  failures.py  posts.py  scores.py  tags.py  vectors.py
server/src/processors/: __init__.py  basics.py  common.py  embedding.py  gpu_pressure.py  pipeline.py  scoring.py  tagger.py
server/src/server/: annotation_queues.py  annotations.py  commands.py  dependencies.py  exceptions.py  folders.py  images.py  posts.py  statistics.py  tags.py
server/src/server/utils/: __init__.py  vec.py
server/src/services/: danbooru_import.py  dedup.py  file_management.py  gallery_dl_import.py  intake.py  s3.py  tag_i18n.py  waifu.py  wd_tagging.py
server/src/tools/: colors.py  colorthief.py
server/tests/: conftest.py  test_annotation_api.py  test_annotation_queue_repo.py  test_annotation_repo.py  test_api_characterization.py  test_danbooru_download.py  test_danbooru_import.py  test_export_annotations.py  test_feature_flags.py  test_file_walk.py  test_folder_delete_api.py  test_folder_stats.py  test_gallery_dl_import.py  test_image_thumbnail.py  test_post_grouping.py  test_post_repo_characterization.py  test_request_scoping.py  test_siglip_embed.py  test_tag_i18n.py  test_text_search.py  test_upload_intake.py  test_url_import_api.py  test_vec_dispatch.py  test_vector_repo.py
server/tests/fixtures/: gallerydl_kemono.json  gallerydl_yandere.json
web/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  uno.config.ts  vite.config.ts
web/docs/: design-system.md
web/src/: App.vue  auto-import.d.ts  components.d.ts  main.ts  style.css
web/src/api/: client.gen.ts  index.ts  sdk.gen.ts  text-search.ts  types.gen.ts
web/src/apiv2/: client.gen.ts  sdk.gen.ts  types.gen.ts
(+137 files in other folders)
