[project]
name = "pictoria"
version = "0.1.0"
description = "Your Personal Image Gallery"
authors = [{ name = "Jannchie", email = "jannchie@gmail.com" }]
dependencies = [
    "rich>=13.9.4",
    "wdtagger[gpu]>=0.14.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.2",
    "diffusers>=0.31.0",
    "openai>=1.55.1",
    "watchdog>=6.0.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.17",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "sqlalchemy>=2.0.38",
    "transformers>=4.46.3",
    "pillow-avif-plugin>=1.4.6",
    "datasets>=3.1.0",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.2.4",
    "pgvector>=0.3.6",
    "scikit-image>=0.25.2",
    "litestar[sqlalchemy,standard]>=2.15.2",
    "diffusion-prompt-embedder>=0.2.0",
    "accelerate>=1.6.0",
    "waifu-scorer[cu124]>=0.1.1",
    "inch>=0.2.0",
    "pyarrow>=20.0.0",
    "minio>=7.2.15",
    "boto3>=1.40.16",
]

requires-python = ">=3.11"

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[dependency-groups]
dev = ["ipykernel>=6.29.5", "matplotlib>=3.9.3", "ruff>=0.12.10"]

[tool.pyright]
enabled = true
reportGeneralTypeIssues = true

[tool.ruff]
exclude = ["alembic", ".venv"]
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "PGH",
    "RUF003",
    "BLE001",
    "ERA001",
    "FIX002",
    "TD002",
    "TD003",
    "D",
    "A004",
    "ANN201",
    "B008",
    "FAST002",
    "INP001",
]
[tool.ruff.lint.per-file-ignores]
"**/test/**/*" = ["S101"]

[tool.uv]
package = true
upgrade = true
