[project]
name = "pictoria"
version = "0.1.0"
description = "Your Personal Image Gallery"
authors = [{ name = "Jannchie", email = "jannchie@gmail.com" }]
dependencies = [
    "rich>=15.0.0",
    "wdtagger[gpu]>=0.16.0",
    "uvicorn>=0.46.0",
    "httpx>=0.28.1",
    "diffusers>=0.37.1",
    "openai>=2.36.0",
    "watchdog>=6.0.0",
    "python-multipart>=0.0.28",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.8.0",
    "pillow-avif-plugin>=1.5.5",
    "datasets>=4.8.5",
    "python-dotenv>=1.2.2",
    "scikit-image>=0.26.0",
    "litestar[standard]>=2.21.1",
    "diffusion-prompt-embedder>=0.2.0",
    "accelerate>=1.13.0",
    "waifu-scorer[cu124]>=0.2.1",
    "inch>=0.2.0",
    "pyarrow>=24.0.0",
    "minio>=7.2.20",
    "boto3>=1.43.6",
    "thumbhash>=0.1.2",
    "duckdb>=1.5.2",
    "pytz>=2026.2",
]

requires-python = ">=3.11"

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[dependency-groups]
dev = ["ipykernel>=7.2.0", "matplotlib>=3.10.9", "ruff>=0.15.12"]

[tool.pyright]
enabled = true
reportGeneralTypeIssues = true

[tool.ruff]
exclude = [".venv"]
line-length = 160

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",
    "PGH",
    "RUF003",
    "BLE001",
    "ERA001",
    "FIX002",
    "TD002",
    "TD003",
    "D",
    "A004",
    "ANN201",
    "B008",
    "FAST002",
    "INP001",
]
[tool.ruff.lint.per-file-ignores]
"**/test/**/*" = ["S101"]

[tool.uv]
package = true
upgrade = true
